`XStreamSerializable` (#881)